# Projet_c

./: CMakeLists.txt  SeniorCare.iss  bdd.c  bdd.sql  builder.ui  connexion.ui  main.c  medecin_page.c  patient_page.c  patient_page.h
SeniorCare/: CMakeLists.txt  bdd.c  bdd.h  main.c  medecin_page.h  patient_page.h
test/: CMakeLists.txt  rendez_vous.c
